working with translation not fixed yet

--- a/resources/lang/bn.json
+++ b/resources/lang/bn.json
@@ -1,12 +1,1 @@
-{
-    "add_translation_for": "Add Translation for",
-    "back": "Back",
-    "languages": "Languages",
-    "laravel": "Laravel",
-    "add_language": "Add Language",
-    "documentation": "Documentation",
-    "laravel_news": "Laravel News",
-    "Vibrant Ecosystem": "Vibrant Ecosystem",
-    "laracasts": "Laracasts",
-    "save": "Save"
-}
+{"add_translation_for":"জন্য অনুবাদ যোগ করুন","back":"পেছনে","languages":"ভাষা","laravel":"লারাভেল","add_language":"ভাষা যোগ করুন","documentation":"ডকুমেন্টেশন","laravel_news":"লারাভেল নিউজ","vibrant_ecosystem":"প্রাণবন্ত ইকোসিস্টেম","laracasts":"লারাকাস্ট","save":"সংরক্ষণ"}
