--- a/resources/lang/default.json
+++ b/resources/lang/default.json
@@ -6,7 +6,7 @@
     "add_language": "Add Language",
     "documentation": "Documentation",
     "laravel_news": "Laravel News",
-    "Vibrant Ecosystem": "Vibrant Ecosystem",
+    "vibrant_ecosystem": "Vibrant Ecosystem",
     "laracasts": "Laracasts",
     "save": "Save"
 }
